--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,10 +9,6 @@
 body {
   font-family: 'Quicksand', sans-serif;
 }
-// .container {
-//   height: 400%;
-//   width: 900px;
-// }
 
 main {
   background-image: url("https://res.cloudinary.com/dyiugkn4y/image/upload/v1571671166/GA%20Pix/SEI/background-image1.jpg");
@@ -143,6 +139,17 @@ h1 {
   color: white;
 }
 
+
+span {
+  font-size: 60px;
+  font-style: italic;
+}
+
+.main-paragraph {
+  font-size: 20px;
+  line-height: 1.6;
+}
+
 // CREATE TICKET FORM
 #btn-create-ticket {
   background-color: Transparent;
@@ -203,37 +210,60 @@ h1 {
 // ******CHANGE PASSWORD SECTION****** //
 
 .change_password_div {
-  height: 400px;
-  text-align: center;
-  width: 500px;
-  margin-top: 100px;
-  margin-left: 300px;
+  background-color: white;
+  height: 100px;
+  width: 100%;
+  // height: 400px;
+  // text-align: center;
+  // width: 500px;
+  // margin-top: 100px;
+  // margin-left: 300px;
 }
 
 .change-password-header {
   font-weight: 600;
-  font-size: 39px;
-  margin-right: 600px;
-  margin-top: 15px;
-  text-align: right;
-  margin-top: 30px;
-  margin-left: 95px;
+  font-size: 30px;
+  margin-right: 500px;
+  margin-top: -5px;
+  // text-align: right;
 }
 
 // CHANGE PASSWORD FORM
 #change-password {
-  // align-items: center;
+  align-items: center;
   display: flex;
   justify-content: flex-end;
-  // margin-bottom: 500%;
-  // margin-right: 30px;
+  margin-top: -80px;
+  margin-right: 30px;
 }
+
+// #icon-lock-op {
+//   margin-left: -400px;
+//   margin-top: 30px;
+//   padding-right: 80px;
+// }
+//
+// #icon-lock-np {
+//   margin-top: 30px;
+//   padding-right: 80px;
+// }
+//
+// .input-field-op {
+//   // margin-left: 200px;
+//   // margin-top: -65px;
+// }
+//
+// .input-field-np {
+//   margin-left: 200px;
+//   margin-top: -65px;
+// }
 
 #btn-change-password {
   background-color: Transparent;
   border-radius: 5px;
   color: black;
   height: 25px;
+  margin-right: -30px;
   width: 150px;
 }
 
