--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,6 +13,8 @@ body {
 main {
   background-image: url("https://res.cloudinary.com/dyiugkn4y/image/upload/v1571671166/GA%20Pix/SEI/background-image1.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   text-align: center;
 }
 
@@ -21,7 +23,6 @@ main {
 }
 
 // ******SIGN IN SECTION****** //
-
 .sign_in_div {
   height: 100px;
   width: 100%;
@@ -131,7 +132,7 @@ h1 {
   background-color: Transparent;
   color: black;
   margin-bottom: -80px;
-  margin-right: 50px;
+  margin-right: 80px;
 }
 
 #btnSignUp:hover {
@@ -139,6 +140,9 @@ h1 {
   color: white;
 }
 
+.tickets-header {
+  margin-right: 35%;
+}
 
 span {
   font-size: 60px;
@@ -148,9 +152,31 @@ span {
 .main-paragraph {
   font-size: 20px;
   line-height: 1.6;
+  // text-align: center;
+}
+
+.main-paragraph2 {
+  font-size: 20px;
+  line-height: 1.6;
+  // text-align: center;
+  margin-top: -36px;
+}
+
+// ******CREATE TICKET SECTION****** //
+.create_ticket_div {
+  // margin-top: 30px;
+  // margin-left: 95px;
+}
+
+.create-ticket-header {
+  margin-right: 420px;
 }
 
 // CREATE TICKET FORM
+#create-ticket {
+  margin: 40px -10px 0px 50px;
+}
+
 #btn-create-ticket {
   background-color: Transparent;
   border-radius: 5px;
@@ -163,6 +189,8 @@ span {
   background-color: #343a40;
   color: white;
 }
+
+// ******GET TICKET SECTION****** //
 
 // GET TICKET FORM
 #btn-get-tickets {
@@ -178,12 +206,15 @@ span {
   color: white;
 }
 
+// ******UPDATE TICKET SECTION****** //
+
 // UPDATE TICKET FORM
 #btn-update-ticket {
   background-color: Transparent;
   border-radius: 5px;
   color: black;
   height: 25px;
+  margin-top: 20px;
   width: 150px;
 }
 
@@ -192,12 +223,15 @@ span {
   color: white;
 }
 
+// ******REMOVE TICKET SECTION****** //
+
 // REMOVE TICKET FORM
 #btn-remove-ticket {
   background-color: Transparent;
   border-radius: 5px;
   color: black;
   height: 25px;
+  margin-top: 20px;
   width: 150px;
 }
 
@@ -208,62 +242,39 @@ span {
 
 
 // ******CHANGE PASSWORD SECTION****** //
-
 .change_password_div {
-  background-color: white;
-  height: 100px;
-  width: 100%;
-  // height: 400px;
-  // text-align: center;
-  // width: 500px;
-  // margin-top: 100px;
-  // margin-left: 300px;
+  height: 400px;
+  text-align: center;
+  width: 500px;
+  margin-top: 100px;
+  margin-left: 450px;
 }
 
 .change-password-header {
-  font-weight: 600;
-  font-size: 30px;
-  margin-right: 500px;
-  margin-top: -5px;
-  // text-align: right;
+  margin-top: 30px;
+  margin-left: -10px;
 }
 
 // CHANGE PASSWORD FORM
 #change-password {
-  align-items: center;
-  display: flex;
-  justify-content: flex-end;
-  margin-top: -80px;
-  margin-right: 30px;
+  margin-top: 20px;
+  margin-left: 170px;
 }
 
-// #icon-lock-op {
-//   margin-left: -400px;
-//   margin-top: 30px;
-//   padding-right: 80px;
-// }
-//
-// #icon-lock-np {
-//   margin-top: 30px;
-//   padding-right: 80px;
-// }
-//
-// .input-field-op {
-//   // margin-left: 200px;
-//   // margin-top: -65px;
-// }
-//
-// .input-field-np {
-//   margin-left: 200px;
-//   margin-top: -65px;
-// }
+#icon-lock-op {
+  margin: 0 500px -60px -40px;
+}
+
+#icon-lock-np {
+  margin: 0 500px -60px -40px;
+}
 
 #btn-change-password {
   background-color: Transparent;
   border-radius: 5px;
   color: black;
   height: 25px;
-  margin-right: -30px;
+  margin-left: -160px;
   width: 150px;
 }
 
@@ -276,6 +287,7 @@ span {
   background-color: Transparent;
   border-radius: 5px;
   color: black;
+  margin: 0 0 0 -30px;
   width: 100px;
 }
 
