Minor styling changes
I've made some minor styling changes to the html and css files.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -317,6 +317,12 @@ span {
 }
 
 
+// ******HARDWARE HEADERs****** //
+.hardware-header {
+  margin: auto;
+  margin-right: 575px;
+}
+
 // ******HARDWARE BUTTONS****** //
 #btn-create-hardware {
   background-color: Transparent;
