Minor changes to the html, css, ui and app files
I've made some minor changes to the html, css, ui and app files

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,6 +33,12 @@ main {
   font-weight: bold;
 }
 
+// #hardware-display2 {
+//   font-size: 20px;
+//   font-style: italic;
+//   font-weight: bold;
+// }
+
 .inputField {
   border-radius: 5px;
 }
@@ -321,6 +327,7 @@ span {
 // ******HARDWARE HEADERs****** //
 .hardware-header {
   margin: auto;
+  margin-top: 30px;
   margin-right: 575px;
 }
 
